[package]
name = "liquidity_check"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Valid a string as representing a monetary value"
homepage = "https://github.com/b3nj5m1n/liquidity_check"
repository = "https://github.com/b3nj5m1n/liquidity_check"
keywords = ["money", "currency", "iso-4217"]
categories = ["parser-implementations"]

[dependencies]
lazy_static = "1.4.0"
rusty-money = "0.4.1"
